# DOA

./: handin_week1-2.md
Week3-4/Handin3-4/: .gitignore  CMakeLists.txt  hand-in-3-4.md
Week3-4/Handin3-4/projects/exercise1/include/: simple_linked_list.h
Week3-4/Handin3-4/projects/exercise1/src/: main  main.cpp
Week3-4/Handin3-4/projects/exercise2/include/: ArrayStack.h
Week3-4/Handin3-4/projects/exercise2/src/: main.cpp
Week3-4/Handin3-4/projects/exercise3/include/: queue_class.h  simple_list.h  stack_class.h
Week3-4/Handin3-4/projects/exercise3/src/: main.cpp
Week3-4/Handin3-4/projects/exercise5/include/: simple_set.h
Week3-4/Handin3-4/projects/exercise6/include/: dictionary.h
Week3-4/Handin3-4/projects/exercise6/src/: main.cpp
Week3-4/Handin3-4/shared/include/: person.h
Week3-4/Handin3-4/shared/src/: person.cpp
Week5-6/: CMakeLists.txt  hand-in-5-6.md
Week5-6/projects/week5-6/opgave1/src/: main  main.cpp
Week5-6/projects/week5-6/opgave2/src/: main  main.cpp
Week5-6/projects/week5-6/opgave3/src/: main.cpp
Week5-6/projects/week5-6/opgave4/src/: main.cpp
Week5-6/projects/week5-6/opgave5/include/: simple_linked_list.h
Week5-6/projects/week5-6/opgave5/src/: main.cpp
Week5-6/projects/week5-6/opgave6/include/: sort.h
Week5-6/projects/week5-6/opgave6/src/: main.cpp  pseudo.md  test_sort.cpp
Week5-6/projects/week5-6/opgave7/src/: main.cpp  pseudo.md
Week5-6/projects/week5-6/opgave8/include/: quick_sort.h
Week5-6/projects/week5-6/opgave8/src/: main.cpp
